# agent-mill

./: .CLAUDE.md  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.yml  mill  setup.sh  start.sh  stop.sh  wrangler.jsonc
backend/: .dockerignore  .env.example  Dockerfile  init.sql  pyproject.toml  setup_mysql.sh
backend/app/: deps.py  main.py
backend/app/api/: auth.py  chat.py  downloads.py  feedback.py  files.py  orchestrator.py  tasks.py
backend/app/api/admin/: agent_templates.py  agents.py  alerts.py  audit.py  auth.py  data_masking.py  departments.py  knowledge.py  logs.py  mcp.py  memories.py  models.py  operation_approvals.py  (+7 more)
backend/app/auth/: ldap.py  sso.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: init_db.py  models.py  seed_call_logs.py  seed_conversations.py  seed_demo.py  session.py
backend/app/integrations/: dingtalk.py  feishu.py
backend/app/middleware/: audit.py  rate_limiter.py
backend/app/runtime/: agent_runner.py  mcp_client.py  mcp_manager.py  pack_engine.py  prompt_builder.py  skill_executor.py  tool_registry.py  widget_guidelines.py
backend/app/schemas/: __init__.py
backend/app/services/: agent_communication.py  agent_context_service.py  alert_service.py  audit.py  audit_service.py  conversation_compressor.py  downloads.py  export_service.py  file_cleanup.py  file_magic.py  file_parser.py  knowledge_service.py  learning_service.py  memory_extractor.py  memory_service.py  mineru_client.py  orchestrator.py  quota_service.py  skill_scan.py  task_runner.py
(+151 files in other folders)
